--- a/bicicletas.html
+++ b/bicicletas.html
@@ -8,6 +8,7 @@
     <title>Bicicletas | Bikcraft</title>
     <link rel="preload" href="css/style.css" as="style">
     <link rel="stylesheet" href="css/style.css">
+    <script>document.documentElement.classList.add('js')</script>
 </head>
 
 <body>
