--- a/bicicletas/magic.html
+++ b/bicicletas/magic.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Magic Might | Bikcraft</title>
     <link rel="stylesheet" href="../css/style.css">
+    <script>document.documentElement.classList.add('js')</script>
 </head>
+
 <body id="bicicleta">
     <header class="header-bg">
         <div class="header conteiner">
@@ -42,7 +45,7 @@
                     <span class="font-1-xs cor-06"><img src="../img/icones/entrega.svg" alt="">entrega em 5 dias</span>
                     <span class="font-1-xs cor-06"><img src="../img/icones/estoque.svg" alt="">18 em estoque</span>
                 </div>
-            
+
                 <h2 class="font-1-xs cor-00">Informações</h2>
                 <ul class="bicicleta-informacoes">
                     <li>
@@ -78,68 +81,69 @@
             </div>
         </div>     
     </main>
-    <article class="conteiner bicicleta-lista">
-        <h2 class="font-1-xxl">escolha a sua<span class="cor-p01">.</span></h2>
-        <ul>
-            <li>
-                <a href="../bicicletas/nimbus.html">
-                    <img src="../img/bicicletas/nimbus.jpg" alt="Bicicleta Magic Might">
-                    <h3 class="font-1-xl">Nimbus</h3>
-                    <span class="font-2-m cor-08">R$ 4499</span>
-                </a>
-            </li>
-            <li>
-                <a href="../bicicletas/nebula.html">
-                    <img src="../img/bicicletas/nebula.jpg" alt="Bicicleta Nebula Cosmic">
-                    <h3 class="font-1-xl">Nebula Cosmic</h3>
-                    <span class="font-2-m cor-08">R$ 3999</span>
-                </a>
-            </li>
-        </ul>
-    </article>
-    <article class="seguro-bg">
-        <div class="conteiner seguro">
-            <div class="seguro-imagem">
-                <img src="../img/fotos/seguros.jpg" alt="">
-            </div>
-            <div class="seguro-conteudo">
-                <h2 class="font-1-xxl cor-00">Pedale mais tranquilo com o nosso <span class="cor-p01">seguro.</span></h2>
-                <p class="font-2-l cor-05">Inscreva-se em um dos planos do nosso seguro Bikcraft e aproveite diversos benefícios.</p>
-                <a class="button" href="../seguros.html">CONHEÇA MAIS</a>
-            </div>
-        </div>
-    </article>
-    <footer class="rodape-bg">
-        <div class="rodape conteiner">
-            <img src="../img/bikcraft.svg" alt="Logo Bikcraft">
-            <div  class="rodape-contato">
-                    <h3 class="font-2-l-b cor-00">CONTATO</h3>
-                    <ul class="font-2-m cor-05">
-                        <li><a href="tel:+5522999999999">+55 22 99999-9999</a></li>
-                        <li><a href="mailto:contato@bikcraft.com">contato@bikcraft.com</a></li>
-                        <li>Rua Ali Longe, 31 - Araruama</li>
-                        <li>Rio de Janeiro -RJ</li>
+    <article class=" conteiner bicicleta-lista">
+                    <h2 class="font-1-xxl">escolha a sua<span class="cor-p01">.</span></h2>
+                    <ul>
+                        <li>
+                            <a href="../bicicletas/nimbus.html">
+                                <img src="../img/bicicletas/nimbus.jpg" alt="Bicicleta Magic Might">
+                                <h3 class="font-1-xl">Nimbus</h3>
+                                <span class="font-2-m cor-08">R$ 4499</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="../bicicletas/nebula.html">
+                                <img src="../img/bicicletas/nebula.jpg" alt="Bicicleta Nebula Cosmic">
+                                <h3 class="font-1-xl">Nebula Cosmic</h3>
+                                <span class="font-2-m cor-08">R$ 3999</span>
+                            </a>
+                        </li>
                     </ul>
-                    <div class="rodape-redes">
-                        <a href="../"><img src="../img/redes/instagram.svg" alt="Instagram"></a>
-                        <a href="../"><img src="../img/redes/facebook.svg" alt="Facebook"></a>
-                        <a href="../"><img src="../img/redes/youtube.svg" alt="Youtube"></a>
-                    </div>      
-            </div>
-            <div class="rodape-informacoes">
-                <h3 class="font-2-l-b cor-00">INFORMAÇÕES</h3>
-                <nav>
-                    <ul class="font-2-m cor-05">
-                        <li><a href="../bicicletas.html">Bicicletas</a></li>
-                        <li><a href="../seguros.html">Seguros</a></li>
-                        <li><a href="../contato.html">Contato</a></li>
-                        <li><a href="../termos.html">Termos e Condições</a></li>
-                    </ul>
-                </nav>
-            </div>
-            <p class="rodape-copy font-2-m cor-06">Bikcraft © Alguns direitos reservados.</p>
-        </div>
-    </footer>
-    <script src="../js/script.js"></script>
+                    </article>
+                    <article class="seguro-bg">
+                        <div class="conteiner seguro">
+                            <div class="seguro-imagem">
+                                <img src="../img/fotos/seguros.jpg" alt="">
+                            </div>
+                            <div class="seguro-conteudo">
+                                <h2 class="font-1-xxl cor-00">Pedale mais tranquilo com o nosso <span class="cor-p01">seguro.</span></h2>
+                                <p class="font-2-l cor-05">Inscreva-se em um dos planos do nosso seguro Bikcraft e aproveite diversos benefícios.</p>
+                                <a class="button" href="../seguros.html">CONHEÇA MAIS</a>
+                            </div>
+                        </div>
+                    </article>
+                    <footer class="rodape-bg">
+                        <div class="rodape conteiner">
+                            <img src="../img/bikcraft.svg" alt="Logo Bikcraft">
+                            <div class="rodape-contato">
+                                <h3 class="font-2-l-b cor-00">CONTATO</h3>
+                                <ul class="font-2-m cor-05">
+                                    <li><a href="tel:+5522999999999">+55 22 99999-9999</a></li>
+                                    <li><a href="mailto:contato@bikcraft.com">contato@bikcraft.com</a></li>
+                                    <li>Rua Ali Longe, 31 - Araruama</li>
+                                    <li>Rio de Janeiro -RJ</li>
+                                </ul>
+                                <div class="rodape-redes">
+                                    <a href="../"><img src="../img/redes/instagram.svg" alt="Instagram"></a>
+                                    <a href="../"><img src="../img/redes/facebook.svg" alt="Facebook"></a>
+                                    <a href="../"><img src="../img/redes/youtube.svg" alt="Youtube"></a>
+                                </div>
+                            </div>
+                            <div class="rodape-informacoes">
+                                <h3 class="font-2-l-b cor-00">INFORMAÇÕES</h3>
+                                <nav>
+                                    <ul class="font-2-m cor-05">
+                                        <li><a href="../bicicletas.html">Bicicletas</a></li>
+                                        <li><a href="../seguros.html">Seguros</a></li>
+                                        <li><a href="../contato.html">Contato</a></li>
+                                        <li><a href="../termos.html">Termos e Condições</a></li>
+                                    </ul>
+                                </nav>
+                            </div>
+                            <p class="rodape-copy font-2-m cor-06">Bikcraft © Alguns direitos reservados.</p>
+                        </div>
+                    </footer>
+                    <script src="../js/script.js"></script>
 </body>
+
 </html>
