--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta name="description" content="Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para o cliente. Explore o mundo na sua velocidade com a Bikcraft">
     <link rel="preload" href="css/style.css" as="style">
     <link rel="stylesheet" href="css/style.css">
+    <script>document.documentElement.classList.add('js')</script>
 </head>
 
 <body>
@@ -29,11 +30,11 @@
     <main class="introducao-bg">
         <div class="introducao conteiner">
             <div class="introducao-conteudo">
-                <h1 class="font-1-xxl">Bicicletas feitas sob medida<span>.</span></h1>
-                <p class="font-2-l">Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para o cliente. Explore o mundo na sua velocidade com a Bikcraft.</p>
-                <a href="./bicicletas.html" class="button">Selecione a sua</a>
+                <h1 class="font-1-xxl fadeInDown" data-anime="200">Bicicletas feitas sob medida<span>.</span></h1>
+                <p class="font-2-l fadeInDown" data-anime="400">Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para o cliente. Explore o mundo na sua velocidade com a Bikcraft.</p>
+                <a href="./bicicletas.html" data-anime="600" class="button">Selecione a sua</a>
             </div>
-            <picture>
+            <picture class="fadeInDown" data-anime="800">
                 <source media="(max-width: 800px)" srcset="./img/bicicletas/nimbus.jpg">
                 <img src="img/fotos/introducao.jpg" width="1280" height="1600" alt="Bicicleta elétrica preta">
             </picture>
@@ -176,6 +177,8 @@
             <p class="rodape-copy font-2-m cor-06">Bikcraft © Alguns direitos reservados.</p>
         </div>
     </footer>
+
+    <script src="./js/plugins/simple-anime.js"></script>;
     <script src="./js/script.js"></script>
 </body>
 
