--- a/seguros.html
+++ b/seguros.html
@@ -8,13 +8,14 @@
     <title>Seguros | Bikcraft</title>
     <link rel="preload" href="css/style.css" as="style">
     <link rel="stylesheet" href="css/style.css">
+    <script>document.documentElement.classList.add('js')</script>
 </head>
 
 <body>
     <header class="header-bg">
         <div class="header conteiner">
             <a href="./index.html">
-                <img src="img/bikcraft.svg" width="136" height="32"alt="Bikcraft">
+                <img src="img/bikcraft.svg" width="136" height="32" alt="Bikcraft">
             </a>
             <nav aria-label="primaria">
                 <ul class="header-menu font-1-m">
@@ -29,7 +30,7 @@
         <div class="seguros conteiner">
             <span class="font-2-l-b cor-05">escolha seu seguro</span>
             <h2 class="font-1-xxl cor-00">você seguro<span class="cor-p01">.</span></h2>
-            <div class="seguros-item">
+            <div class="seguros-item fadeInLeft" data-anime="200">
                 <h3 class="font-1-xl cor-06">PRATA</h3>
                 <span class="font-1-xl cor-00">R$ 199<span class="font-1-xs">mensal</span></span>
                 <ul class="font-2-m cor-00">
@@ -40,7 +41,7 @@
                 </ul>
                 <a href="./orcamento.html?tipo=seguro&produto=prata" class="button secundario">inscreva-se</a>
             </div>
-            <div class="seguros-item">
+            <div class="seguros-item fadeInRight" data-anime="400">
                 <h3 class="font-1-xl cor-p01">OURO</h3>
                 <span class="font-1-xl cor-00">R$ 299<span class="font-1-xs">mensal</span></span>
                 <ul class="font-2-m cor-00">
@@ -153,6 +154,8 @@
             <p class="rodape-copy font-2-m cor-06">Bikcraft © Alguns direitos reservados.</p>
         </div>
     </footer>
+
+    <script src="./js/plugins/simple-anime.js"></script>;
     <script src="./js/script.js"></script>
 </body>
 
